15396
I had trouble comming up with a good summary for this bug, but here is the problem:

The following code works fine in RC2 but fails to compile in RC3
```scala
class A

class B extends A

import collection.JavaConversions.asList
import collection.mutable.Buffer
class C {
  def f(c: java.util.List[A])
  f(asList(Buffer(new B)))
}
```
Output is:
```scala
scala> class A
defined class A

scala> 

scala> class B extends A
defined class B

scala> 

scala> import collection.JavaConversions.asList
import collection.JavaConversions.asList

scala> import collection.mutable.Buffer
import collection.mutable.Buffer

scala> class C {
     |   def f(c: java.util.List[A])
     |   f(asList(Buffer(new B)))
     | }
<console>:11: error: type mismatch;
 found   : scala.collection.mutable.Buffer[B]
 required: scala.collection.mutable.Buffer[A]
         f(asList(Buffer(new B)))
                        ^
```
